# SCCover

./: .gitignore  CMakeLists.txt  HOWTO  build.sh  main.cpp
Cover/: CoverMap.cpp  CoverMap.hpp
FileIO/: FileIO.cpp  FileIO.hpp
src/scc_cover/: CMakeLists.txt  package.xml
src/scc_cover/include/nscc_cover/: nscc_cover.hpp  nscc_cover_node.hpp
src/scc_cover/src/nscc_cover/: nscc_cover.cpp  nscc_cover_main.cpp  nscc_cover_node.cpp
src/scc_message/: CMakeLists.txt  package.xml
src/scc_message/msg/: CoverTask.msg  PolygonMap.msg
src/scc_simulate/: CMakeLists.txt  package.xml  plugins_description.xml
src/scc_simulate/include/rviz_plugin/: NSCCCoverTask.hpp  PolygonMap.hpp  SCCCoverTask.hpp  _PointSelectTool.hpp  _PolygonSelectTool.hpp
src/scc_simulate/launch/: nscc_cover.launch.py
src/scc_simulate/rviz/: default.rviz
src/scc_simulate/src/rviz_plugin/: NSCCCoverTask.cpp  PolygonMap.cpp  SCCCoverTask.cpp  _PointSelectTool.cpp  _PolygonSelectTool.cpp
